--- a/LiveReport2013/ja.lproj/MainStoryboard_iPhone.storyboard
+++ b/LiveReport2013/ja.lproj/MainStoryboard_iPhone.storyboard
@@ -144,7 +144,7 @@
         <scene sceneID="Wl1-7J-1WN">
             <objects>
                 <navigationController title="Info" definesPresentationContext="YES" id="QbJ-qy-Kgp" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Info" image="tarbar_icon-05.png" id="eJd-Rd-qFO"/>
+                    <tabBarItem key="tabBarItem" title="情報" image="tarbar_icon-05.png" id="eJd-Rd-qFO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="mMm-pT-Xc7" customClass="PrettyNavigationBar">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -200,7 +200,7 @@
         <scene sceneID="6Jm-jk-5xH">
             <objects>
                 <navigationController title="Post" definesPresentationContext="YES" id="ihZ-kx-Mnh" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Posts" image="tarbar_icon-04.png" id="O32-ak-JYU"/>
+                    <tabBarItem key="tabBarItem" title="みんなの投稿" image="tarbar_icon-04.png" id="O32-ak-JYU"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="i7n-38-yrr" customClass="PrettyNavigationBar">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -256,7 +256,7 @@
         <scene sceneID="VJE-dt-xRv">
             <objects>
                 <navigationController title="Social" definesPresentationContext="YES" id="IEm-hs-CTX" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Social" image="tarbar_icon-03.png" id="bIZ-AO-JYl"/>
+                    <tabBarItem key="tabBarItem" title="SNS" image="tarbar_icon-03.png" id="bIZ-AO-JYl"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="mYv-n5-sii" customClass="PrettyNavigationBar">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -334,7 +334,7 @@
         <scene sceneID="tvs-Aa-9kC">
             <objects>
                 <navigationController title="Places" id="rNH-qP-HJQ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Places" image="tarbar_icon-01.png" id="7"/>
+                    <tabBarItem key="tabBarItem" title="会場" image="tarbar_icon-01.png" id="7"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="GKP-dW-FCE" customClass="PrettyNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -353,7 +353,7 @@
         <scene sceneID="nJr-HU-sA4">
             <objects>
                 <navigationController title="Songs" id="hK7-XZ-SAg" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Songs" image="tarbar_icon-02.png" id="6"/>
+                    <tabBarItem key="tabBarItem" title="曲" image="tarbar_icon-02.png" id="6"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="1v4-1v-YNh" customClass="PrettyNavigationBar">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -377,53 +377,8 @@
         <image name="tarbar_icon-05.png" width="30" height="30"/>
     </resources>
     <classes>
-        <class className="InfoViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/InfoViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="infoTable" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="PlaceViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlaceViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="placeListTable" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="PostListViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PostListViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="postListTable" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="PrettyNavigationBar" superclassName="UINavigationBar">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PrettyNavigationBar.h"/>
-        </class>
-        <class className="PrettyTabBar" superclassName="UITabBar">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/PrettyTabBar.h"/>
-        </class>
-        <class className="SocialViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SocialViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="socialTable" candidateClass="UITableView"/>
-            </relationships>
-        </class>
         <class className="SongDetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SongDetailViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="songDetailTable" candidateClass="UITableView"/>
-            </relationships>
-        </class>
-        <class className="SongViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SongViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="selectView:"/>
-                <relationship kind="outlet" name="artistSelectionSegmentedController" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="pageControl" candidateClass="UIPageControl"/>
-                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
-            </relationships>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
