--- a/LiveReport/Main.storyboard
+++ b/LiveReport/Main.storyboard
@@ -1,7 +1,65 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="eOf-t1-qSg">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Item 2-->
+        <scene sceneID="iad-Yf-3Q1">
+            <objects>
+                <viewController id="vsc-fn-K5v" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yIa-17-8o1"/>
+                        <viewControllerLayoutGuide type="bottom" id="HXv-Tq-Yi2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bY6-O2-YGU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="GGT-YJ-Hr1"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Re-ut-2bH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="257" y="659"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="bbF-nt-RcO">
+            <objects>
+                <viewController id="muQ-cs-PCm" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iOB-G9-rrO"/>
+                        <viewControllerLayoutGuide type="bottom" id="0gK-4e-PhR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xwN-FI-cjA">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="0rX-g6-XGQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pD3-BK-OlV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="257" y="-2"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Zmw-GU-KcI">
+            <objects>
+                <tabBarController id="eOf-t1-qSg" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="9tR-6K-ELQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="muQ-cs-PCm" kind="relationship" relationship="viewControllers" id="quJ-DE-5xg"/>
+                        <segue destination="vsc-fn-K5v" kind="relationship" relationship="viewControllers" id="6SS-mC-PMH"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kp5-cf-gv4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-563" y="329"/>
+        </scene>
+    </scenes>
 </document>
